--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lib-utils-ts": "^0.0.0-test",
     "lucide": "^0.433.0",
     "lucide-react": "^0.441.0",
+    "moment": "^2.30.1",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
